In honor of doctor 李文亮.

--- a/aboly.html
+++ b/aboly.html
@@ -836,7 +836,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">敏于事</span>：做事勤快麻利。<a id="min3"></a><span class="lyterm">敏</span>：本义为快速，敏捷，agile，引申为勤勉，积极，active。<span class="lyexample"><span>【例】</span><span><a href="#7.20" class="lyref">7.20</a> <span class="lyq">我非生而知之者，好古敏以求之者也。</span></span></span></p></li>
 <li>
-<p><span class="lyterm">就有道而正焉</span>：多跟有道德的人学习，从而纠正自己的缺点不足。<a id="jiu4a"></a><span class="lyterm">就</span>：动词，趋向，接近。<span class="lyexample"><span>【例】</span><span>成语“半推半就”。</span></span>后来合成动词“就正”，表示求教于他人来匡正自己学问上的失误。<span class="lyexample"><span>【例】</span><span>《大义觉迷录》：<span class="lyq">且家贫力单，势不能出外远游，就正有道。</span>（后省介词“于”。）</span></span></p>
+<p><span class="lyterm">就有道而正焉</span>：多跟有道德的人学习，从而纠正自己的缺点不足。<a id="jiu4a"></a><span class="lyterm">就</span>：动词，趋向，接近。<span class="lyexample"><span>【例】</span><span>成语“半推半就”。</span></span>后来合成动词“就正”，表示求教于他人来匡正自己学问上的失误。<span class="lyexample"><span>【例】</span><span>清代《大义觉迷录》：<span class="lyq">且家贫力单，势不能出外远游，就正有道。</span>（后省介词“于”。）</span></span></p>
 <p><span class="lyterm">焉</span>：助词，用作句末或分句末停顿，自身无意义。</p>
 </li>
 <li>
@@ -874,10 +874,10 @@ img.characterimg {
 <li><p><a id="yun2"></a><span class="lyterm">云</span>：说，称。云略偏重于传达内容，<a href="#zi3">曰</a>略偏重于动作的进行。成语“子曰诗云”泛指儒家典籍，常用来调侃人只会引经据典却不通实务。</p></li>
 <li>
 <p><span class="lyterm">如切如磋，如琢如磨</span>：出自《诗经·卫风》第一首《淇奥》，原诗是形容君子勤于修养学问品德，就像工匠精心打磨象牙、雕琢美玉。子贡引用它想表达的意思是，人有了好的条件，还要注重修养磨练才能成器。<span class="lyseealso"><span>【参】</span><span>《诗经》毛亨传：<span class="lyq">治骨曰切，象曰磋，玉曰琢，石曰磨。</span>《礼记·学记》：<span class="lyq">玉不琢，不成<a href="#qi4">器</a>；人不学，不知道。是故古之王者建国君民，教学为先。</span></span></span></p>
-<p><a id="huoyongjingdian"></a>从经典中抽取只言片语来表达自己的观点，是当时的惯常做法。有时想表达的意思故意偏离或超出了原意，就要只看字面含义，从引用者的上下文重新理解。后文还有引用《诗经》之处，可以留意这个特点。元代钱惟善《韩诗外传·序》说：<span class="lyq">《外传》虽非解经之详，断章取义，要有合于孔门<a href="#zixia">商</a>、<a href="#zigong">赐</a>言诗之旨</span>（<a id="yao4"></a>要：总，总之），说的就是本章与 <a href="#3.8" class="lyref">3.8</a> ，这种方式被视作<span class="lyq">阐<a href="#weiyandayi">微</a>而彰显</span>的学术成就（明代杨祜（<span class="lypinyin">hù</span>）《韩诗外传·序》）。<a href="#liujing">六经</a>成为正统后，古代学者的主要职责之一就是注疏经典，根据静态的文本阐述古代圣贤之意，发掘适合时用的修身治世准则，由此形成了传统儒家学术的主体——经学。<a id="gubukewu"></a><span class="lyseealso"><span>【参】</span><span>清代金圣叹在注解杜甫名作《水槛遣心》时，特别赞叹了子贡“断章取义”的慧眼：<span class="lyq">昔所本无，何必有？今所适有，何必无？先生句不必如此解，然此解人胸中固不可无也。</span></span></span></p>
+<p><a id="huoyongjingdian"></a>从经典中抽取只言片语来表达自己的观点，是当时的惯常做法：<span class="lyq">赋诗断章，余取所求焉</span>（《左传·襄公二十八年》）。有时想表达的意思故意偏离或超出了原意，就要只看字面含义，从引用者的上下文重新理解。后文还有引用《诗经》之处，可以留意这个特点。元代钱惟善《韩诗外传·序》说：<span class="lyq">《外传》虽非解经之详，断章取义，要有合于孔门<a href="#zixia">商</a>、<a href="#zigong">赐</a>言诗之旨</span>（<a id="yao4"></a>要：总，总之），指的就是本章与 <a href="#3.8" class="lyref">3.8</a> ，这种方式被视为<span class="lyq">阐<a href="#weiyandayi">微</a>而彰显</span>的学术成就（明代杨祜（<span class="lypinyin">hù</span>）《韩诗外传·序》）。<a href="#liujing">六经</a>成为正统后，古代学者的主要职责之一就是注疏经典，根据静态的文本阐述古代圣贤之意，发掘适合时用的修身治世准则，由此形成了传统儒家学术的主体——经学。<a id="gubukewu"></a><span class="lyseealso"><span>【参】</span><span>清代金圣叹在注解杜甫名作《水槛遣心》时，特别赞叹了子贡“断章取义”的慧眼：<span class="lyq">昔所本无，何必有？今所适有，何必无？先生句不必如此解，然此解人胸中固不可无也。</span></span></span></p>
 </li>
 <li><p><a id="zhu1"></a><span class="lyterm">诸</span>：代词，用作宾语，相当于“之”。另外还能代替“之于”和“之乎”。<span class="lyexample"><span>【例】</span><span><a href="#5.24" class="lyref">5.24</a> <span class="lyq">乞诸其邻而与之。</span><a href="#6.6" class="lyref">6.6</a> <span class="lyq">山川其舍诸？</span></span></span></p></li>
-<li><p><span class="lyterm">往</span>：过去，从前。其本义为去，根据上下文，既能表达已经发生的过往、往事，也能表达尚未发生的以后、今后。<span class="lyexample"><span>【例】</span><span><a href="#3.21" class="lyref">3.21</a> <span class="lyq">既往不咎。</span><a href="#7.29" class="lyref">7.29</a> <span class="lyq">与其洁也，不保其往也。</span></span></span></p></li>
+<li><p><span class="lyterm">往</span>：过去，从前。其本义为去，根据上下文，既能表达已经发生的过往、往事，也能表达尚未发生的今后、将来。<span class="lyexample"><span>【例】</span><span><a href="#3.21" class="lyref">3.21</a> <span class="lyq">既往不咎。</span><a href="#7.29" class="lyref">7.29</a> <span class="lyq">与其洁也，不保其往也。</span></span></span></p></li>
 </ul>
 </div>
 </div>
@@ -1087,7 +1087,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p><span class="lyterm">攻乎异端</span>：费心劳神于杂学。<span class="lyterm">攻</span>：治，专心从事。<span class="lyexample"><span>【例】</span><span>《诗经·大雅·灵台》：<span class="lyq">经始灵台，经之营之。庶民攻之，不日成之。</span></span></span></p>
-<p>也有认为“攻”表示言辞上的攻击，批判，依据是《论语》中的另外两例：<a href="#11.17" class="lyref">11.17</a> <span class="lyq">鸣鼓而攻之</span>，<a href="#12.21" class="lyref">12.21</a> <span class="lyq">攻其恶，无攻人之恶</span>，都是这个意思。尊重和包容异议，的确契合现代精神，但当时私学方起，百家待兴，未必有争鸣的条件，前一个解释更符合《论语》的整体观念。</p>
+<p>也有认为“攻”表示言辞上的攻击，批判，依据是《论语》中的另外两例：<a href="#11.17" class="lyref">11.17</a> <span class="lyq">鸣鼓而攻之</span>，<a href="#12.21" class="lyref">12.21</a> <span class="lyq">攻其恶，无攻人之恶</span>，都是这个意思。尊重和包容异议，的确契合现代精神，一个健康的社会不该只有一种声音。但当时私学方起，百家待兴，未必有争鸣的条件，前一个解释更符合《论语》的整体观念。</p>
 <p><span class="lyterm">异端</span>：跟自己不是一头儿的，从孔子的角度，也就是与仁礼大道的宗旨不同的小道、杂学。孔子并不反对娱乐爱好：<a href="#17.22" class="lyref">17.22</a> <span class="lyq">不有博弈者乎？为之犹贤乎已。</span>而是希望珍惜光阴，分清主次：<a href="#15.20" class="lyref">15.20</a> <span class="lyq">君子疾没世而名不称焉</span>，<a href="#19.4" class="lyref">19.4</a> <span class="lyq">致远恐泥，是以君子不为也。</span></p>
 <p>也许是受“攻”的影响，这个词后来有了强烈的对抗性，相当于歪门邪道。称别人为异端的，常隐含表示自己才算正统、真理。</p>
 </li>
@@ -3042,7 +3042,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="shizhi"></a><span class="lyterm">师挚</span>：鲁国的乐师，名挚。</p></li>
 <li>
-<p><span class="lyterm">乱</span>：乐曲的尾声部分，也指辞赋结尾收束总括全篇的话。<span class="lyexample"><span>【例】</span><span>屈原《离骚》结尾的起始句：<span class="lyq">乱曰：已矣哉！国无人莫我知兮，又何怀乎故都？</span></span></span></p>
+<p><span class="lyterm">乱</span>：乐曲的尾声部分，与“始”相对。后又指辞赋结尾收束总括全篇的话。<span class="lyexample"><span>【例】</span><span>屈原《离骚》结尾的起始句：<span class="lyq">乱曰：已矣哉！国无人莫我知兮，又何怀乎故都？</span></span></span></p>
 <p><span class="lyterm">《<a href="#guanju">关雎</a>》之乱</span>是说以《关雎》作为奏乐的收尾，而不是《关雎》本身的结尾。</p>
 </li>
 <li><p><a id="yangyang"></a><span class="lyterm">洋洋</span>：盛大无边的样子，本义是形容水势浩荡。<span class="lyexample"><span>【例】</span><span>《诗经·卫风·硕人》：<span class="lyq">河水洋洋，北流活活。</span>（活活：形容水流跃动有声。）</span></span></p></li>
@@ -4601,7 +4601,7 @@ img.characterimg {
 <p><a href="#zigong">子贡</a>问曰：“乡人皆好之，何如？”子曰：“未可也。”</p>
 <p>“乡人皆恶之，何如？”子曰：“未可也。不如乡人之善者好之，其不善者恶之。”</p>
 </div>
-<div class="lyblobannotation"><p><span class="lyseealso"><span>【参】</span><span><a href="#4.3" class="lyref">4.3</a> </span></span></p></div>
+<div class="lyblobannotation"><p><span class="lyseealso"><span>【参】</span><span><a href="#4.3" class="lyref">4.3</a> <span class="lyq">唯仁者能好人，能恶人。</span></span></span></p></div>
 </div>
 <a id="13.25"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#13.25">13.25</a></div>
@@ -5375,7 +5375,7 @@ img.characterimg {
 <a id="15.28"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#15.28">15.28</a></div>
 <div class="lybloboriginaltext"><p>子曰：“众恶之，必察焉。众好之，必察焉。”</p></div>
-<div class="lyblobannotation"><p><span class="lyseealso"><span>【参】</span><span><a href="#13.24" class="lyref">13.24</a> </span></span></p></div>
+<div class="lyblobannotation"><p><span class="lyseealso"><span>【参】</span><span><a href="#13.24" class="lyref">13.24</a> <span class="lyq">不如乡人之善者好之，其不善者恶之。</span>用于吏治，《大义觉迷录》中曾静概括为：<span class="lyq">察吏所以安民，而惩贪兼得以养廉。</span>例如《史记·田敬仲完世家》载，齐威王即位以来<span class="lyq">诸侯并伐，国人不治</span>，详加察访，即墨大夫上任后<span class="lyq">毁言日至，然吾使人视即墨，田野辟，民人<a href="#ji3">给</a>，官无留事，东方以宁。</span>阿大夫<span class="lyq">誉言日闻，然使使视阿，田野不辟，民贫苦</span>，属县被攻取却无知无为。于是威王将即墨大夫<span class="lyq">封之万家</span>，斥责阿大夫<span class="lyq">“是子以币厚吾左右以求誉也。”是日，烹阿大夫，及左右尝誉者皆并烹之。……于是齐国震惧，人人不敢饰非，务尽其诚。齐国大治。</span>（即墨、阿（<span class="lypinyin">ē</span>）：均为齐国五都之一，在今山东省平度市、聊城市东阿县。辟：开垦。厚：收买。）</span></span></p></div>
 </div>
 <a id="15.29"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#15.29">15.29</a></div>
