--- a/aboly.html
+++ b/aboly.html
@@ -613,7 +613,7 @@ img.characterimg {
 <div class="lyseealso">
 <p><span>【参】</span><span>孔子开创性地将“仁”提高到人之至<a href="#de2">德</a>、总德的地位，以人为本，注重人与人之间的良性关系。《论语》从多方面阐述了仁，影响最大的要数 <a href="#6.30" class="lyref">6.30</a> <a href="#12.1" class="lyref">12.1</a> <a href="#12.22" class="lyref">12.22</a> 。这里摘录后世对仁的若干论述以供参考。</span></p>
 <ul>
-<li><p> 《中庸》：<span class="lyq">仁者人也，亲亲为大。</span>（<a id="qinqin"></a>第一个<a href="#qin1">亲</a>是动词，爱；第二个是名词，亲属，特指父母。）</p></li>
+<li><p> 《中庸》：<span class="lyq">〔子曰：〕仁者人也，亲亲为大。</span>（<a id="qinqin"></a>第一个<a href="#qin1">亲</a>是动词，爱；第二个是名词，亲属，特指父母。）</p></li>
 <li><p> 《孟子·离娄下》：<span class="lyq">仁者爱人，有礼者敬人。</span>（讲仁礼。亦见 <a href="#12.22" class="lyref">12.22</a> 。）</p></li>
 <li><p><a id="sishanduan"></a>《孟子·公孙丑上》：<span class="lyq">恻隐之心，仁之端也；羞恶之心，义之端也；辞让之心，礼之端也；是非之心，智之端也。</span>（端：开始，开端。）</p></li>
 <li><p> 《韩非子·解老》：<span class="lyq">仁者，谓其中心欣然爱人也。……生心之所不能已也，非求其报也。</span></p></li>
@@ -854,9 +854,12 @@ img.characterimg {
 <p>子曰：“<a href="#zigong">赐</a>也，始可与言《诗》已矣！告诸往而知来者。”</p>
 </div>
 <div class="lyblobannotation">
-<p>《论语》包含很多的孔子师徒问答，本章是第一例，就体现出孔子因人施教的特点，他的回答往往根据提问者的性格、所处环境的不同有所偏重。子贡思维通达，言语机敏，善于提问，是孔子的好谈伴。</p>
+<p>《论语》包含孔子师徒的很多问答，本章是第一例，就能看出孔子因人施教的特点，他的回答往往根据提问者的性格、所处环境的不同有所偏重。子贡思维通达，言语机敏，善于设问，是孔子的好谈伴。</p>
 <ul class="lyblobitemize">
-<li><p><span class="lyterm">谄</span>（<span class="lypinyin">chǎn</span>）：奉承，巴结。<span class="lyexample"><span>【例】</span><span>成语“谄上欺下”。</span></span></p></li>
+<li>
+<p><span class="lyterm">谄</span>（<span class="lypinyin">chǎn</span>）：奉承，巴结。<span class="lyexample"><span>【例】</span><span>成语“谄上欺下”。</span></span></p>
+<p>贫富属于物质的境遇，骄谄反映内在的德行。<a href="#20.2" class="lyref">20.2</a> <span class="lyq">泰而不骄</span>是孔子认可的“五美”之一，基督教更把傲慢（Pride）列为“七宗罪”（Seven Deadly Sins）之首，因为它使人自我膨胀，以致滥用权力造成毁灭性的后果；相应地，谦逊（Humility）被列为“七美德”（Seven Virtues）之首。</p>
+</li>
 <li>
 <p><span class="lyterm">未若</span>：不如，比不上。<span class="lyexample"><span>【例】</span><span>《世说新语·言语·七十一》：<span class="lyq">白雪纷纷何所似？……撒盐空中差可拟。……未若柳絮因风起。</span>（差：略，大致。）</span></span></p>
 <p>孔子的这句回答，《史记·仲尼弟子列传》引作<span class="lyq">不如贫而乐道，富而好礼</span>。也可以参照<a href="#topickuaile">主题索引</a>体会乐在何处。</p>
@@ -1724,7 +1727,7 @@ img.characterimg {
 <p><span class="lyterm"><a href="#li3">礼</a>让</span>：并列结构的名词，守礼和谦让。<span class="lyexample"><span>【例】</span><span>《尚书·虞夏书·尧典》：<span class="lyq">〔帝<a href="#yao">尧</a>〕允恭克让。</span>（允：诚，确实。<a id="ke4a"></a>克：能。）孔颖达疏引郑玄注：<span class="lyq">推贤尚善曰让。</span></span></span></p>
 <p>现代汉语中，“礼让”已基本转为偏正结构，多用作动词，有礼貌地谦让。</p>
 </li>
-<li><p><a id="wei2b"></a><span class="lyterm">为</span>（<span class="lypinyin">wéi</span>）：动词，等于一般性的做，do，可以搭配的对象很宽泛，要根据上下文具体理解。<span class="lyterm">为国</span>：指治国理政。<span class="lyseealso"><span>【参】</span><span>《韩诗外传》第1卷第5章：<span class="lyq">人之命在天，国之命在礼。君人者，降礼尊贤而<a href="#wangdao">王</a>，重法爱民而霸，好利多诈而危，权谋倾覆而亡。</span>《左传·襄公十三年》：<span class="lyq">让，礼之主也。<a href="#fanxuanzi">范宣子</a>让，其下皆让。……世之治也，君子尚能而让其下，小人农力以事其上，是以上下有礼，而谗<a href="#te2">慝</a><a href="#chu4">黜</a>远，由不争也，谓之懿德。及其乱也，君子称其功以<a href="#jia1a">加</a>小人，小人<a href="#fa2">伐</a>其技以<a href="#ping2">冯</a>君子，是以上下无礼，乱虐并生，由争善也，谓之昏德。国家之敝，恒必由之。</span>（农力：努力。）《战国策》刘向书录：<span class="lyq">五<a href="#zhuhou">伯</a>之起，尊事周室。五伯之后，……犹以义相支持，歌说以相感，聘觐以相交，期会以相一，盟誓以相救。天子之命，犹有所行；会享之国，犹有所耻；小国得有所依，百姓得有所息。故孔子曰：“能以礼让为国乎，何有？”周之流化，岂不大哉！</span></span></span></p></li>
+<li><p><a id="wei2b"></a><span class="lyterm">为</span>（<span class="lypinyin">wéi</span>）：动词，等于一般性的做，do，可以搭配的对象很宽泛，要根据上下文具体理解。<span class="lyterm">为国</span>：指治国理政。<span class="lyseealso"><span>【参】</span><span>《韩诗外传》第1卷第5章：<span class="lyq">人之命在天，国之命在礼。君人者，降礼尊贤而<a href="#wangdao">王</a>，重法爱民而霸，好利多诈而危，权谋倾覆而亡。</span>《左传·襄公十三年》：<span class="lyq">让，礼之主也。<a href="#fanxuanzi">范宣子</a>让，其下皆让。……世之治也，君子尚能而让其下，小人农力以事其上，是以上下有礼，而谗<a href="#te2">慝</a><a href="#chu4">黜</a>远，由不争也，谓之懿德。及其乱也，君子称其功以<a href="#jia1a">加</a>小人，小人<a href="#fa2">伐</a>其技以<a href="#ping2">冯</a>君子，是以上下无礼，乱虐并生，由争善也，谓之昏德。国家之敝，恒必由之。</span>（农力：努力。）《战国策》刘向书录：<span class="lyq">五<a href="#zhuhou">伯</a>之起，尊事周室。五伯之后，……犹以义相支持，歌说以相感，聘觐以相交，期会以相一，盟誓以相救。天子之命，犹有所行；会享之国，犹有所耻；小国得有所依，百姓得有所息。故孔子曰：“能以礼让为国乎，何有？”周之流化，岂不大哉！</span>（<a id="pin4"></a>聘：诸侯国之间的访问。觐：诸侯朝见天子。）</span></span></p></li>
 <li><p><a id="heyou"></a><span class="lyterm">何有</span>：“有何”的倒装，字面上是说有什么呢，多用于反问，可表达的意思包括：有什么难的呢（有何难），有什么关系呢（<a href="#heshiyu">有何事</a>），有什么值得看重的呢（有何重），有什么好在乎的呢（有何惜）。这里是第一个意思，相当于 <a href="#6.8" class="lyref">6.8</a> <span class="lyq">于从政乎何有？</span>《后汉书·班昭传》即引作：<span class="lyq">《论语》曰：“能以礼让为国，于从政乎何有？”</span><span class="lyexample"><span>【例】</span><span>《宋史·程琳传》：<span class="lyq">臣为陛下惜，于臣何有？</span>《管子·小称》：<span class="lyq">人情非不爱其子也，于子之不爱，将何有于公？</span>李贽《与周友山》：<span class="lyq">士为知己者死，死且甘焉，又何有于废弃<a href="#yu2">欤</a>？</span></span></span></p></li>
 </ul></div>
 </div>
@@ -2361,7 +2364,7 @@ img.characterimg {
 </li>
 <li>
 <p><span class="lyterm">野</span>：质朴率性，也含有粗鄙不懂规矩的意味。<span class="lyseealso"><span>【参】</span><span><a href="#13.3" class="lyref">13.3</a> <span class="lyq">野哉，由也！</span></span></span></p>
-<p><a id="shi3b"></a><span class="lyterm">史</span>：文辞繁复，引申为浮夸虚饰。这个意义来自古代祝史（祭祀官）祝辞的繁于文采，<span class="lyq">务博记、尚文辞</span>（北宋张耒（<span class="lypinyin">lěi</span>）），<span class="lyq">知其文而不知其文之实</span>（明代王衡《四书驳异》），近似于现代口语的穷讲究、拿劲、矫情。<span class="lyexample"><span>【例】</span><span>《韩非子·难言》讲向君上进言之难：<span class="lyq">捷敏辩<a href="#ji3">给</a>，繁于文采，则见以为史。</span></span></span><span class="lyseealso"><span>【参】</span><span>《仪礼·聘礼》：<span class="lyq">辞无常，<a href="#xun4">孙</a>而说。辞多则史，少则不达。辞苟足以达，义之至也。</span>外语翻译上，信和雅的度常常不易拿捏，正如东晋慧远在删订鸠摩罗什译《大智度论》的《大智度论钞·序》结尾自陈：<span class="lyq">圣人依方设训，文质殊体。若以文应质，则疑者众；以质应文，则悦者寡。……远于是简繁理秽，以详其中，令质文有体，义无所越。</span></span></span></p>
+<p><a id="shi3b"></a><span class="lyterm">史</span>：文辞繁复，引申为浮夸虚饰。这个意义来自古代祝史（祭祀官）祝辞的繁于文采，<span class="lyq">务博记、尚文辞</span>（北宋张耒（<span class="lypinyin">lěi</span>）），<span class="lyq">知其文而不知其文之实</span>（明代王衡《四书驳异》），近似于现代口语的穷讲究、拿劲、矫情。<span class="lyexample"><span>【例】</span><span>《韩非子·难言》讲向君上进言之难：<span class="lyq">捷敏辩<a href="#ji3">给</a>，繁于文采，则见以为史。</span></span></span><span class="lyseealso"><span>【参】</span><span>《仪礼·<a href="#pin4">聘</a>礼》：<span class="lyq">辞无常，<a href="#xun4">孙</a>而说。辞多则史，少则不达。辞苟足以达，义之至也。</span>外语翻译上，信和雅的度常常不易拿捏，正如东晋慧远在删订鸠摩罗什译《大智度论》的《大智度论钞·序》结尾自陈：<span class="lyq">圣人依方设训，文质殊体。若以文应质，则疑者众；以质应文，则悦者寡。……远于是简繁理秽，以详其中，令质文有体，义无所越。</span></span></span></p>
 </li>
 <li><p><span class="lyterm">彬</span>（<span class="lypinyin">bīn</span>）：文质合宜，相得益彰。其字形从林从彡（<span class="lypinyin">shān</span>，文采），表示文采盛美。成语“文质彬彬”形容人文雅有教养的样子。<span class="lyseealso"><span>【参】</span><span>《圣经·旧约·箴言》25:11：<span class="lyqe">A word fitly spoken is like apples of gold in pictures of silver.</span>（<span class="lyq">一句话说得合宜，就如金苹果在银网子里。</span>）</span></span></p></li>
 </ul></div>
@@ -2619,7 +2622,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#7.12">7.12</a></div>
 <div class="lybloboriginaltext"><p>子曰：“富而可求也，虽执鞭之士，吾亦为之；如不可求，从吾所好。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">可</span>：这里的判断标准，并非客观上是否存在可行的途径，而是这样做是否符合道义，可以比较 <a href="#4.3" class="lyref">4.3</a>  的“能”。<span class="lyterm">可求</span>即当求。它的反面就像朱熹形容的，<span class="lyq">惟得之求，无复<a href="#lian2">廉</a><a href="#chi3a">耻</a></span>（《宋史·朱熹传》）。<span class="lyseealso"><span>【参】</span><span><a href="#4.5" class="lyref">4.5</a> 。苏轼《上梅直讲书》：<span class="lyq">人不可以<a href="#gou3">苟</a>富贵，亦不可以<a href="#tu2a">徒</a>贫贱。</span>（梅直讲：即梅尧臣，时任国子监直讲，辅助博士、助教讲授经学。）故作清高不可取，正如《聊斋志异·黄英》所言：<span class="lyq">自食其力不为贪，贩花为业不为俗。人固不可苟求富，然亦不必务求贫也。</span></span></span></p></li>
+<li><p><span class="lyterm">可</span>：这里的判断标准，并非客观上是否存在可行的途径，而是这样做是否符合道义，可以比较 <a href="#4.3" class="lyref">4.3</a>  的“能”。<span class="lyterm">可求</span>即当求。它的反面就像朱熹形容的，<span class="lyq">惟得之求，无复<a href="#lian2">廉</a><a href="#chi3a">耻</a></span>（《宋史·朱熹传》）。<span class="lyseealso"><span>【参】</span><span><a href="#4.5" class="lyref">4.5</a> <span class="lyq">不以其道得之，不处也。</span>苏轼《上梅直讲书》：<span class="lyq">人不可以<a href="#gou3">苟</a>富贵，亦不可以<a href="#tu2a">徒</a>贫贱。</span>（梅直讲：即梅尧臣，时任国子监直讲，辅助博士、助教讲授经学。）故作清高并不可取，正如《聊斋志异·黄英》所言：<span class="lyq">自食其力不为贪，贩花为业不为俗。人固不可苟求富，然亦不必务求贫也。</span></span></span></p></li>
 <li><p><span class="lyterm">执鞭之士</span>：《周礼》中有两说，一是在市集门口握鞭巡视并维持秩序的“胥”（<span class="lypinyin">xū</span>，见《地官司徒》），一是天子诸侯出行时以鞭击地使路人回避的“条狼氏”（见《秋官司寇》），都属于下等差役。皇侃《论语义疏》解释为驾车之士，就与 <a href="#9.2" class="lyref">9.2</a>  暗合。总之都是司职低微的小角色。<span class="lyexample"><span>【例】</span><span>《史记·管晏列传》结尾，司马迁感慨：<span class="lyq">假令<a href="#yanpingzhong">晏子</a>而在，余虽为之执鞭，所忻慕焉。</span>（忻：通“欣”。）《三国演义》：<span class="lyq">职守，人之大义也。凡人在难，犹或<a href="#xu4c">恤</a>之；执鞭而弃其事，不祥莫大焉。</span></span></span></p></li>
 </ul></div>
 </div>
@@ -4421,7 +4424,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#13.5">13.5</a></div>
 <div class="lybloboriginaltext"><p>子曰：“诵《诗》三百，授之以政，不达，使于四方，不能专对。虽多，亦奚以为？”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">专</span>：独有，掌控。<span class="lyterm">专对</span>：独立应答，泛指随机应变地妥善处理（外交）事务。这句话勾勒了一个书呆子的形象。<span class="lyseealso"><span>【参】</span><span>当时的外交辞令常引用《<a href="#shijing">诗经</a>》来表达观点，参见 <a href="#16.13" class="lyref">16.13</a> <span class="lyq">不学《诗》，无以言</span><a href="#wuyiyan">所引</a>《汉书·艺文志》。《韩诗外传》第8卷第12章是善于专对的例子：<span class="lyq"><a href="#qijinggong">齐景公</a>使使于楚，楚王与之上九重之台，顾使者曰：“齐亦有台若此者乎？”使者曰：“吾君有治位之堂，土阶三等，茅茨不翦，采椽不斫，犹以谓为之者劳，居之者泰。吾君<a href="#wu1">恶</a>有台若此者乎？”于是楚王盖悒如也。</span>（茅茨（<span class="lypinyin">cí</span>）：茅草做的屋顶盖。翦（<span class="lypinyin">jiǎn</span>）：通“剪”。采椽：柞木做的椽子。“茅茨不翦，采椽不斫”也是《韩非子·五<a href="#du4">蠹</a>》形容<a href="#yao">尧帝</a>生活简朴的话。悒（<span class="lypinyin">yì</span>）：忧愁不安。）</span></span></p></li>
+<li><p><span class="lyterm">专</span>：独有，掌控。<span class="lyterm">专对</span>：独立应答，泛指随机应变地妥善处理（外交）事务。这句话勾勒了一个书呆子的形象。<span class="lyseealso"><span>【参】</span><span>当时的外交辞令常引用《<a href="#shijing">诗经</a>》来表达观点，参见 <a href="#16.13" class="lyref">16.13</a> <span class="lyq">不学《诗》，无以言</span><a href="#wuyiyan">所引</a>《汉书·艺文志》。《公羊传·庄公十九年》：<span class="lyq"><a href="#pin4">聘</a>礼：大夫受命不受辞；出竟有可以安社稷、利国家者，则专之可也。</span>（不受辞：指不限定具体怎么说。竟：通“境”。）《韩诗外传》第8卷第12章是善于专对的例子：<span class="lyq"><a href="#qijinggong">齐景公</a>使使于楚，楚王与之上九重之台，顾使者曰：“齐亦有台若此者乎？”使者曰：“吾君有治位之堂，土阶三等，茅茨不翦，采椽不斫，犹以谓为之者劳，居之者泰。吾君<a href="#wu1">恶</a>有台若此者乎？”于是楚王盖悒如也。</span>（茅茨（<span class="lypinyin">cí</span>）：茅草做的屋顶盖。翦（<span class="lypinyin">jiǎn</span>）：通“剪”。采椽：柞木做的椽子。“茅茨不翦，采椽不斫”也是《韩非子·五<a href="#du4">蠹</a>》形容<a href="#yao">尧帝</a>生活简朴的话。悒（<span class="lypinyin">yì</span>）：忧愁不安。）</span></span></p></li>
 <li><p><span class="lyterm">多</span>：指书读得多，诗背得全。<span class="lyterm">亦<a href="#xi1">奚</a>以为</span>的反问，表明了孔子学以致用的观点。</p></li>
 </ul></div>
 </div>
@@ -4988,7 +4991,10 @@ img.characterimg {
 <p><span class="lyterm">夫子自道也</span>：老师说的正是他自己啊。子贡认为这三者孔子都具备了。</p>
 <p>后来成语“夫子自道”表示看起来是说别人，实际却说了他自己。说的人可以是有意或无意，这样评论他的人常语含打趣或讽刺。</p>
 </li></ul>
-<p><span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq">天下之<a href="#da2">达</a>道五，所以行者三。曰：<a href="#junchenfuzi">君臣</a>也，父子也，夫妇也，昆弟也，朋友之交也，五者天下之达道也。知、仁、勇三者，天下之达德也，所以行之者一也。</span>（一：朱熹认为指诚。）《礼记·礼运》：<span class="lyq">用人之知去其诈，用人之勇去其怒，用人之仁去其贪。</span></span></span></p>
+<div class="lyseealso">
+<p><span>【参】</span><span>《中庸》：<span class="lyq">天下之<a href="#da2">达</a>道五，所以行者三。曰：<a href="#junchenfuzi">君臣</a>也，父子也，夫妇也，昆弟也，朋友之交也，五者天下之达道也。知、仁、勇三者，天下之达德也，所以行之者一也。</span>（一：朱熹认为指诚。）《礼记·礼运》：<span class="lyq">用人之知去其诈，用人之勇去其怒，用人之仁去其贪。</span></span></p>
+<p>梁启超1922年的演讲《为学与做人》说：<span class="lyq">人类心理，有知〔识和智慧〕、情〔感〕、意〔志〕三部分，这三部分圆满发达的状态，我们先哲名之为三达德——智、仁、勇。……这三件事是人类普通道德的标准，总要三件具备才能成一个人。……所以教育应分为知育、情育、意育三方面。现在讲的智育、德育、体育，不对，德育范围太笼统，体育范围太狭隘。……教育家教学生，应该以这三件为究竟，我们自动的自己教育自己，也应该以这三件为究竟。</span>他把当时的学校教育比作“贩卖智识杂货店”，因为<span class="lyq">第二层的情育、第三层的意育，可以说完全没有，剩下的只有第一层的知育；就算知育罢，又只有所谓常识和学识，至于我所讲的总体智慧靠来养成根本判断力的，却是一点儿也没有</span>。</p>
+</div>
 </div>
 </div>
 <a id="14.29"></a><div class="lyblob">
@@ -5917,10 +5923,10 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“恶紫之夺朱也，恶郑声之乱雅乐也，恶利口之覆邦家者。”</p></div>
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
-<li><p><span class="lyterm">紫之夺朱</span>。<span class="lyterm">朱</span>：大红色，属于正色。<span class="lyterm">紫</span>：红与蓝的混合色，属于杂色。<span class="lyterm">夺</span>：压倒，胜过。这是指紫色逐渐代替红色成为当时官服的标准色，类似后来的“紫袍金带”，孔子不喜欢这种变化。</p></li>
+<li><p><span class="lyterm">紫之夺朱</span>。<span class="lyterm">朱</span>：大红色，属于正色。<span class="lyterm">紫</span>：红与蓝的混合色，属于杂色。<span class="lyterm">夺</span>：压倒，胜过。这是指紫色逐渐代替红色成为当时官服的标准色，类似后来的“紫袍金带”，孔子不喜欢这种变化。后来“朱紫”常代指优劣、善恶等相对立或对比强烈的两方。<span class="lyexample"><span>【例】</span><span>《后汉书·赵岐传》李贤等注引赵岐《三辅决录·序》：<span class="lyq">玉石朱紫，由此定矣，故谓之《决录》矣。</span></span></span></p></li>
 <li><p><span class="lyterm">覆</span>：本义为翻倒，引申为使灭亡，倾覆。</p></li>
 </ul>
-<p><span class="lyseealso"><span>【参】</span><span><a href="#13.3" class="lyref">13.3</a> 。《孟子·尽心下》引<span class="lyq">孔子曰：“恶似而非者：恶莠，恐其乱苗也；恶<a href="#ning4">佞</a>，恐其乱<a href="#yi4">义</a>也；恶利口，恐其乱<a href="#xin4">信</a>也；恶郑声，恐其乱乐也；恶紫，恐其乱朱也；恶<a href="#xiangyuan">乡原</a>，恐其乱<a href="#de2">德</a>也。”</span>（莠（<span class="lypinyin">yǒu</span>）：狗尾草，常见于田间，形似谷子。）</span></span></p>
+<p><span class="lyseealso"><span>【参】</span><span><a href="#13.3" class="lyref">13.3</a> <span class="lyq">必也正名乎。</span>《孟子·尽心下》引<span class="lyq">孔子曰：“恶似而非者：恶莠，恐其乱苗也；恶<a href="#ning4">佞</a>，恐其乱<a href="#yi4">义</a>也；恶利口，恐其乱<a href="#xin4">信</a>也；恶郑声，恐其乱乐也；恶紫，恐其乱朱也；恶<a href="#xiangyuan">乡原</a>，恐其乱<a href="#de2">德</a>也。”</span>（莠（<span class="lypinyin">yǒu</span>）：狗尾草，常见于田间，形似谷子。）</span></span></p>
 </div>
 </div>
 <a id="17.19"></a><div class="lyblob">
