--- a/aboly.html
+++ b/aboly.html
@@ -1535,7 +1535,7 @@ img.characterimg {
 </li>
 <li>
 <p><a id="sangui"></a><span class="lyterm">三归</span>：解释分歧较多，总之是很大的排场。清代郭嵩焘认为是齐国农民缴纳的粮赋，被<a href="#qihuangong">齐桓公</a>赐给了管仲，使其富比诸侯，根据是《管子·山至数》：<span class="lyq">则民之三有归于上矣。</span>（三：十分之三的余粮。上下文大致是，由于国家支配货币的发行，管仲建议桓公通过低买高卖操控粮食市场，使国家富裕，臣民尽力。）清代俞樾认为是三处宅第，三套房产，退朝后有三家可回，<span class="lyq">则美女充下陈者亦必三处。</span>（下<a href="#chen2a">陈</a>：下位，又专指姬妾。）</p>
-<p>《晏子春秋·内篇问下·第二》由<a href="#qijinggong">齐景公</a>之口说<a href="#qihuangong">齐桓公</a><span class="lyq">善饮酒穷乐，食味方丈，好色无别。</span>（方丈：极言饮食铺张。）《战国策·东周策·周文君免士工师藉》认为，管仲有三归是为了掩君之非：<span class="lyq">国必有诽誉，忠臣令诽在己，誉在上。……齐桓公宫中七市、女闾七百，<a href="#guoren">国人</a>非之；管仲故为三归之家，以掩桓公非，自伤于民也。</span>（<a id="lv2"></a>闾（<span class="lypinyin">lǘ</span>）：街巷的大门，又代指街巷。女闾：后世指妓院。七百为女子数。）</p>
+<p>《晏子春秋·内篇问下·第二》由<a href="#qijinggong">齐景公</a>之口说<a href="#qihuangong">齐桓公</a><span class="lyq">善饮酒穷乐，食味方丈，好色无别。</span>（方丈：一丈见方，极言饮食铺张。）《战国策·东周策·周文君免士工师藉》认为，管仲有三归是为了掩君之非：<span class="lyq">国必有诽誉，忠臣令诽在己，誉在上。……齐桓公宫中七市、女闾七百，<a href="#guoren">国人</a>非之；管仲故为三归之家，以掩桓公非，自伤于民也。</span>（<a id="lv2"></a>闾（<span class="lypinyin">lǘ</span>）：街巷的大门，又代指街巷。女闾：后世指妓院。七百为女子数。）《韩非子·难一·八》则认为是为了治国之便：<span class="lyq">管仲以贱为不可以治贵，故请<a href="#gaoshiguoshi">高、国</a>之上；以贫为不可以治富，故请三归；以疏为不可以治亲，故处仲父。管仲非贪，以便治也。</span></p>
 <p><a id="guanzhongyanzi"></a><span class="lyseealso"><span>【参】</span><span>《孔子家语·曲礼子贡问》有一段有趣的对话。<span class="lyq">子贡问曰：“管仲失于奢，<a href="#yanpingzhong">晏子</a>失于俭，与其俱失也，二者孰贤？”</span>孔子回答：管仲奢侈极了，而不失为贤大夫，当他的上级却很难；晏子俭朴极了，当然也是贤大夫，可做他的下属同样很难。所以结论是：<span class="lyq">君子下不僭上，上不逼下。</span>（<a id="jian4a"></a>僭（<span class="lypinyin">jiàn</span>）：逾越本分，下级冒用上级之物。）</span></span></p>
 </li>
 <li><p><a id="she4a"></a><span class="lyterm"><a href="#she4">摄</a></span>：兼职，代理。《论语注疏》引东汉包咸语：<span class="lyq">礼，国君事大，官各有人；大夫兼并。今管仲家臣备职，非为俭。</span>（备职：专职，不兼并。）<span class="lyexample"><span>【例】</span><span>《清史稿·史贻直列传》：<span class="lyq">贻直乞致仕，命不必兼摄工部，岁加俸五百金。</span>（<a href="#zhi4">致</a><a href="#shi4a">仕</a>：辞官。）“摄政”指暂代君主处理国政，如<a href="#zhougong">周公</a>曾为<a href="#chengwang">周成王</a>摄政，清朝多尔衮为顺治帝摄政。</span></span><span class="lyseealso"><span>【参】</span><span>《孟子·告子下》引述齐桓公葵丘之会的盟约，第四条的<span class="lyq">士无世官，官事无摄</span>，是指诸侯治下。《礼记·礼运》说：<span class="lyq">大夫具官，祭器不假，声乐皆具，非礼也，是谓乱国。</span>（祭器不假：指祭器全备，拟于君仪。）</span></span></p></li>
@@ -2169,7 +2169,7 @@ img.characterimg {
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
 <li><p><span class="lyterm">子桑伯子</span>：鲁国人，复姓子桑，事迹不详。《说苑·修文》载有根据本章敷演的寓言。</p></li>
-<li><p><span class="lyterm">简</span>：简单，不繁琐。例如刘邦击败秦军入关后，与民约法三章：<span class="lyq">杀人者死，伤人及盗抵罪</span>，秦之苛法一律废除，就是简的典型。</p></li>
+<li><p><span class="lyterm">简</span>：简单，不繁琐。例如刘邦击败秦军入关后，与民约法三章：<span class="lyq">杀人者死，伤人及盗抵罪</span>，秦之苛法一律废除，就是典型的简。<span class="lyseealso"><span>【参】</span><span>《韩非子·大体》：<span class="lyq">利莫长于简，福莫久于<a href="#16.1">安</a>。</span></span></span></p></li>
 <li><p><span class="lyterm">居敬</span>：即处敬，内心端肃，慎重对待。<span class="lyseealso"><span>【参】</span><span><a href="#20.2" class="lyref">20.2</a> <span class="lyq">君子无众寡，无小大，无敢慢。</span>明末鹿善继《四书说约》：<span class="lyq">治民全在不扰，而省事本于劳心。</span></span></span></p></li>
 <li><p><a id="wunai"></a><span class="lyterm">无乃</span>：岂不是，常和乎、与、哉、<a href="#ye2">邪</a>等语气词连用，用反问、感叹的语气表示肯定。<span class="lyexample"><span>【例】</span><span><a href="#14.32" class="lyref">14.32</a> <span class="lyq">无乃为佞乎？</span>杜甫《新婚别》：<span class="lyq">暮婚晨告别，无乃太匆忙！</span></span></span></p></li>
 <li><p><a id="tai4"></a><span class="lyterm">大</span>（<span class="lypinyin">tài</span>）：“太”的古字，过于。可以比较与 <a href="#19.3" class="lyref">19.3</a> <span class="lyq">大贤</span>的区别。<span class="lyseealso"><span>【参】</span><span>《韩诗外传》第5卷第16章：<span class="lyq"><a href="#xianwang">圣王</a>之教其民也，必因其情而节之以礼，必从其欲而制以义。义简而备，礼易而<a href="#fa3a">法</a>，去情不远，故民之从命也速。</span></span></span></p></li>
@@ -4910,7 +4910,7 @@ img.characterimg {
 <ol>
 <li><p> 前672年，陈宣公杀太子御寇，另立宠姬之子。<span class="lykeyword">公子完</span>惧祸逃至齐国，得到<a href="#qihuangong">齐桓公</a>的欢迎和任用，从此改称<span class="lykeyword">田氏</span>，定居下来。</p></li>
 <li><p><a href="#chenwenzi">陈文子</a>之子<span class="lykeyword">田无宇</span>甚有宠于<a href="#cuizhu">齐庄公</a>，并娶<a href="#qijinggong">齐景公</a>的姐姐为妻。</p></li>
-<li><p> 田无宇之子<span class="lykeyword">田乞</span>继任宗主后，用小斗收纳赋税，大斗出借粮食，深得民心归附。<a href="#yanpingzhong">晏婴</a>屡次警诫齐景公，景公不以为意。晏婴去世10年后景公病故，田乞弑杀了继位不满一年的新君，清除了高氏、国氏、晏氏等威胁势力，立<span class="lykeyword">齐悼公</span>，自任宰相。</p></li>
+<li><p><a id="gaoshiguoshi"></a>田无宇之子<span class="lykeyword">田乞</span>继任宗主后，用小斗收纳赋税，大斗出借粮食，深得民心归附。<a href="#yanpingzhong">晏婴</a>屡次警诫齐景公，景公不以为意。晏婴去世10年后景公病故，田乞弑杀了继位不满一年的新君，清除了高氏、国氏、晏氏等老牌权贵，立<span class="lykeyword">齐悼公</span>，自任宰相。</p></li>
 <li><p><a href="#guanzhong">鲍叔牙</a>的后人鲍息与悼公有杀父之仇。田乞死后，儿子<span class="lykeyword">田恒</span>继任宰相，怂恿鲍息弑杀了悼公（前485年），立悼公之子为<span class="lyterm">简公</span>。简公任命宠臣阚（<span class="lypinyin">kàn</span>）止为右相（正职），田恒为左相（副职），田恒很忌惮阚止。</p></li>
 <li><p> 前481年，田恒发动政变除掉阚止，囚简公于徐州，不久又害死简公，立其弟为<span class="lykeyword">平公</span>，得以专擅齐政。田恒担心别国前来征讨，就把侵占鲁国、卫国的土地尽数归还，遣使与各国通好，修功行赏，亲附百姓。</p></li>
 <li><p> 自此，田氏专权于齐国平、宣、康三代。前391年，田恒的重孙<span class="lykeyword">田和</span>流放了<span class="lykeyword">齐康公</span>，自立为齐国之君。这时的周王室暗弱无力，居然在前386年册封他为齐侯。<a href="#zhouchao">周朝</a>开国元勋<a href="#jiangtaigong">吕尚</a>建立的<span class="lykeyword">姜齐</span>，于是被<span class="lykeyword">田齐</span>完全取代了。</p></li>
@@ -5849,7 +5849,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“礼云礼云，玉帛云乎哉？乐云乐云，钟鼓云乎哉？”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">礼云礼云</span>：礼啊礼啊。<span class="lyterm">云</span>：助词，用于重复词语之后表示强调。</p></li>
-<li><p><span class="lyterm">云乎</span>：句末助词，表示反问或感叹：难道就是……吗？这是对当时的礼乐制度徒具形式而发的感慨。<span class="lyseealso"><span>【参】</span><span><a href="#3.3" class="lyref">3.3</a> </span></span></p></li>
+<li><p><span class="lyterm">云乎</span>：句末助词，表示反问或感叹：难道就是……吗？这是对当时的礼乐制度徒具形式而发的感慨。<span class="lyseealso"><span>【参】</span><span><a href="#3.3" class="lyref">3.3</a> <span class="lyq">人而不仁，如礼何？人而不仁，如乐何？</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="17.12"></a><div class="lyblob">
@@ -5866,7 +5866,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize"><li>
 <p><a id="xiangyuan"></a><span class="lyterm">乡<a href="#yuan4">愿</a></span>：乡里那种一团和气、谁都不得罪的人，这里指表面上忠厚善良的好好先生，伪君子。</p>
 <div class="lyseealso">
-<p><span>【参】</span><span><a href="#13.24" class="lyref">13.24</a> 。《孟子·尽心下》，孟子向弟子万章痛陈乡原（即乡愿）之害：</span></p>
+<p><span>【参】</span><span><a href="#13.24" class="lyref">13.24</a>  乡人好之恶之。《孟子·尽心下》，孟子向弟子万章痛陈了乡原（即乡愿）之害：</span></p>
 <div class="lyquotepara">
 <p>〔孟子〕曰：“……孔子曰：‘过我门而不入我室，我不憾焉者，其乡原乎！乡原，德之<a href="#zei2">贼</a>也。’”</p>
 <p>〔万章〕曰：“何如斯可谓之乡原矣？”</p>
@@ -5875,7 +5875,7 @@ img.characterimg {
 <p>曰：“非之无举也，刺之无刺也，同乎流俗，合乎污世，居之似忠信，行之似廉洁，众皆悦之，自以为是，而不可与入尧舜之道，故曰‘德之贼’也。孔子曰：恶似而非者；……恶乡原，恐其乱德也。”</p>
 </div>
 <p>（阉（<span class="lypinyin">yān</span>）然：曲意逢迎的样子。非之无举：说他不好吧，又举不出什么不得了的坏事。）</p>
-<p>用文学家梅光迪（1890—1945）的话形容（《孔子之风度》，1932年），乡愿之流<span class="lyq">和光同尘，随时俯仰，以成功为其准则。……吾国数千年社会，即为此种投机分子之大舞台。</span></p>
+<p>文学家梅光迪（1890—1945）认为（《孔子之风度》，1932年），乡愿之流<span class="lyq">和光同尘，随时俯仰，以成功为其准则。……吾国数千年社会，即为此种投机分子之大舞台。</span></p>
 </div>
 </li></ul></div>
 </div>
@@ -6005,7 +6005,7 @@ img.characterimg {
 <p>“恶徼以为知者，恶不孙以为勇者，恶讦以为直者。”</p>
 </div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">恶（<span class="lypinyin">wù</span>）称人之恶（<span class="lypinyin">è</span>）者</span>：厌恶那些说道别人的缺点、揭人短的人。<span class="lyseealso"><span>【参】</span><span><a href="#4.3" class="lyref">4.3</a> </span></span></p></li>
+<li><p><span class="lyterm">恶（<span class="lypinyin">wù</span>）称人之恶（<span class="lypinyin">è</span>）者</span>：厌恶那些说道别人的缺点、揭人短的人。<span class="lyseealso"><span>【参】</span><span><a href="#4.3" class="lyref">4.3</a> <span class="lyq">唯仁者能好人，能恶人。</span></span></span></p></li>
 <li><p><span class="lyterm">讪</span>（<span class="lypinyin">shàn</span>）：毁谤，公开指责。<span class="lyseealso"><span>【参】</span><span>《礼记·少仪》：<span class="lyq">为人臣下者，有<a href="#jian4c">谏</a>而无讪。</span></span></span></p></li>
 <li><p><span class="lyterm">窒</span>（<span class="lypinyin">zhì</span>）：本义为堵塞，引申为执拗，不通情理。</p></li>
 <li><p><span class="lyterm">曰：“赐也……”</span>：这是孔子回答完之后，反过来问子贡的话。</p></li>
@@ -6064,7 +6064,7 @@ img.characterimg {
 <p>（渎：通“黩”，贪求。<a id="youyou"></a>油油：通“悠悠”，第一个指广大众多，与 <a href="#18.6" class="lyref">18.6</a>  的<a href="#taotao">滔滔</a>意蕴相近，第二个指心态安适。裸裎（<span class="lypinyin">chéng</span>）：裸体。<a id="lei3"></a>诔（<span class="lypinyin">lěi</span>）：累述死者功德、致哀并定谥号，通常为上对下；这里是家人、弟子之诔，为私谥。<a id="kaiti"></a>恺（<span class="lypinyin">kǎi</span>）悌：和乐平易。下世：去世。遐年：长寿。窜：改。）</p>
 </div>
 </li>
-<li><p><span class="lyterm">父母之邦</span>：祖国，故土。英语也说 motherland、fatherland、homeland、old country，与此相通。“父母之邦”和“祖国”构词方式相同，字面上是父母、祖辈所居之国；实际的着重点常在于，这是自己生长于斯的家园，既受养育之恩、又在文化上熏陶认同，就像幼子依恋父母<a href="#sannianzhiai">不离于怀</a>的慈爱，包含着难以割舍的感情。对父母的<a href="#xiao4">孝</a>，潜移默化为对祖国的<a href="#zhong1">忠</a>，“何必去父母之邦”的感慨，也可以理解为 <a href="#4.19" class="lyref">4.19</a> <span class="lyq">父母在，不远游</span>的另一种表现。</p></li>
+<li><p><span class="lyterm">父母之邦</span>：祖国，故土。英语也说 motherland、fatherland、homeland、old country，与此相通。“父母之邦”和“祖国”构词方式相同，字面上是父母、祖辈所居之国；实际的着重点常在于，这是自己生长于斯的家园，既受养育之恩、又在文化上熏陶认同，就像幼子依恋父母<a href="#sannianzhiai">不离于怀</a>的慈爱，包含着难以割舍的感情。对父母的<a href="#xiao4">孝</a>，潜移默化为对祖国的<a href="#zhong1">忠</a>，“何必去父母之邦”的感慨，也可理解为 <a href="#4.19" class="lyref">4.19</a> <span class="lyq">父母在，不远游</span>的一种表现。</p></li>
 </ul></div>
 </div>
 <a id="18.3"></a><div class="lyblob">
@@ -6083,15 +6083,15 @@ img.characterimg {
 <li><p><a id="qirenkuinvyue"></a><span class="lyterm">齐人归（<span class="lypinyin">kuì</span>）女乐</span>：指前498年（<a href="#dinggong">鲁定公</a>12年）冬，齐国为了惑乱鲁政而赠送定公女乐骏马一事。<span class="lyterm">归</span>：通“馈”。据《史记·孔子世家》，前501年，定公任用孔子为中都（在今山东省济宁市汶上县西，<a href="#wenshui">汶水</a>之南）宰，孔子当时已经51岁了。<a id="sikong"></a>后来升任司空（主管工程营建）、<a href="#sikou">司寇</a>，理政3月就使鲁国面貌一新。齐国认为孔子为政必使鲁国称雄，对接壤的齐国是重大威胁，应该遏止这个势头，<span class="lyq">于是选齐国中女子好者八十人，皆衣<a href="#wen2">文</a>衣而舞《康乐》，文马三十驷，遗鲁君，陈女乐文马于鲁城南高门外。</span>（好：美。八十人：似应作“二八”，即二<a href="#yi4l">佾</a>。<a id="wei4"></a>遗（<span class="lypinyin">wèi</span>）：赠送。）<a href="#jihuanzi">季桓子</a>先去替定公鉴赏了一番，又劝定公亲自观摩，最终收下了这些诱人的礼物。于是国政荒废，次年春的郊祭也敷衍了事，孔子无奈<a href="#13.9">去了卫国</a>。后来，<span class="lyq">桓子<a href="#kui4">喟</a>然叹曰：“夫子罪我以群婢故也夫！”</span>定公耽于女乐时可不知道，他的日子只剩下3年了。</p></li>
 <li><p><a id="jihuanzi"></a><span class="lyterm">季桓子</span>：季孙斯（？—前492年），<a href="#jishi">季孙氏</a>第5代宗主，谥号是桓（“壮以有力曰桓”），时任鲁国正卿。<a href="#jikangzi">季康子</a>是他的儿子，<a href="#yanghuo">阳货</a>曾任他的管家。</p></li>
 </ul>
-<p><span class="lyseealso"><span>【参】</span><span>《韩非子·十过》中第六过是<span class="lyq">耽于女乐，不顾国政</span>，所举史事与本章相似。<a href="#yidihuaxia">西戎</a>绵诸王听说邻国<a id="qinmugong"></a>秦穆公（前659年—前621年在位，春秋五霸之一）贤能，就派大臣由余出访。穆公问：<span class="lyq">古之明主得国、失国何常以？</span>由余对以<span class="lyq">常以俭得之，以奢失之</span>，并历数<a href="#yao">尧</a>、<a href="#shun">舜</a>、<a href="#yu">禹</a>、<a href="#shangchao">殷</a>之成败。穆公赞叹之余，<span class="lyq">召内史廖而告之曰：“寡人闻邻国有圣人，敌国之忧也。今由余，圣人也，寡人患之，吾将奈何？”内史廖曰：“臣闻戎王之居，僻陋而道远，未闻中国之声。君其遗之女乐，以乱其政，而后为由余请期，以疏其谏。彼君臣有间，而后可图也。”君曰：“诺。”乃使史廖以女乐二八遗戎王，因为由余请期。戎王许诺，见其女乐而说之，设酒张饮，日以听乐，终岁不迁，牛马半死。由余归，因谏戎王。戎王弗听，由余遂去之秦。秦穆公迎而拜之上卿，问其兵势与其地形。既以得之，举兵而伐之，兼国十二，开地千里。</span>（请期：指请求延长出访时间。<a href="#jian4b">间</a>：隔阂，嫌隙。不迁：指不按游牧需要，移居到水草丰盛之地。）戎人民风朴实，入彀还情有可原，鲁国集周代礼乐之<a href="#jizhaguanyue">大观</a>，却有如此丑态，难怪孔子失望透顶了。亦见《吕氏春秋·不苟论·不苟》、《史记·秦本纪》等。</span></span></p>
+<p><span class="lyseealso"><span>【参】</span><span>《韩非子·十过》中第六过是<span class="lyq">耽于女乐，不顾国政</span>，所举史事与本章相似。<a href="#yidihuaxia">西戎</a>绵诸王听说邻国<a id="qinmugong"></a>秦穆公（前659年—前621年在位，春秋五霸之一）贤能，就派大臣由余出访。穆公问：<span class="lyq">古之明主得国、失国何常以？</span>由余对曰<span class="lyq">常以俭得之，以奢失之</span>，并历数<a href="#yao">尧</a>、<a href="#shun">舜</a>、<a href="#yu">禹</a>、<a href="#shangchao">殷</a>的成败。穆公赞叹之余，<span class="lyq">召内史廖而告之曰：“寡人闻邻国有圣人，敌国之忧也。今由余，圣人也，寡人患之，吾将奈何？”内史廖曰：“臣闻戎王之居，僻陋而道远，未闻中国之声。君其遗之女乐，以乱其政，而后为由余请期，以疏其谏。彼君臣有间，而后可图也。”君曰：“诺。”乃使史廖以女乐二八遗戎王，因为由余请期。戎王许诺，见其女乐而说之，设酒张饮，日以听乐，终岁不迁，牛马半死。由余归，因谏戎王。戎王弗听，由余遂去之秦。秦穆公迎而拜之上卿，问其兵势与其地形。既以得之，举兵而伐之，兼国十二，开地千里。</span>（请期：指请求延长出访时间。<a href="#jian4b">间</a>：隔阂，嫌隙。不迁：指不按游牧需要，移居到水草丰盛之地。）戎人民风朴实，入彀还情有可原，鲁国集周代礼乐之<a href="#jizhaguanyue">大观</a>，却有如此丑态，难怪孔子失望透顶了。亦见《吕氏春秋·不苟论·不苟》、《史记·秦本纪》等。</span></span></p>
 </div>
 </div>
 <a id="18.5"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#18.5">18.5</a></div>
 <div class="lybloboriginaltext"><p>楚狂接舆歌而过孔子曰：“凤兮，凤兮！何德之衰？往者不可谏，来者犹可追。已而，已而，今之从政者殆而！”孔子下，欲与之言。趋而辟之，不得与之言。</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><a id="jieyu"></a><span class="lyterm">楚狂接舆</span>：楚国一位佯狂避世的隐士，因为不知其真名，所以根据他走近过孔子的车乘这件事，取了<span class="lyterm">接舆</span>的代称。700多年后西晋皇甫谧的《高士传》认为他名陆通，字接舆，还丰富了他对孔子的狂言，最后说他<span class="lyq">隐蜀峨眉山，寿数百年，俗传以为仙云</span>。</p></li>
-<li><p><span class="lyterm">凤</span>：喻指孔子。有匡时济世之才而不得其用，故称<span class="lyterm">德衰</span>，既含惋惜，又微讽孔子碌碌奔忙，不如避世保身。</p></li>
+<li><p><a id="jieyu"></a><span class="lyterm">楚狂接舆</span>：楚国一位佯狂避世的隐士，因为不知其真名，所以根据他走近过孔子车乘这件事，取了<span class="lyterm">接舆</span>的代称。700多年后西晋皇甫谧的《高士传》认为他名陆通，字接舆，还丰富了他对孔子的狂言，最后说他<span class="lyq">隐蜀峨眉山，寿数百年，俗传以为仙云</span>。</p></li>
+<li><p><span class="lyterm">凤</span>：传说中的百鸟之王，喻指孔子。有匡时济世之才而不得其用，故称<span class="lyterm">德衰</span>，既含惋惜，又微讽孔子碌碌奔忙，不如避世保身。</p></li>
 <li><p><span class="lyterm">追</span>：补救，指用今后的正确行为弥补过去的错误。<span class="lyexample"><span>【例】</span><span>《韩非子·用人》：<span class="lyq"><a href="#shuo4">数</a>以<a href="#de2b">德</a>追祸，是断手而续以玉也。</span>（以德追祸：用恩惠去补偿（对别人的）祸害，这与 <a href="#14.34" class="lyref">14.34</a> <span class="lyq">以德报怨</span>截然不同。）</span></span></p></li>
 <li><p><span class="lyterm">已<a href="#er2">而</a></span>：罢了吧，算了吧。</p></li>
 </ul></div>
@@ -6176,7 +6176,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li><p><span class="lyterm"><a href="#taishi">大（<span class="lypinyin">tài</span>）师</a>挚</span>：乐官长，名挚，应该和 <a href="#8.15" class="lyref">8.15</a>  的<a href="#shizhi">师挚</a>是同一个人。后面的<span class="lyterm">少师</span>就是副乐官长。</p></li>
 <li><p><span class="lyterm">亚饭干</span>：二餐乐师，名干。当时天子诸侯每日用餐时，有乐师奏乐助兴，各餐所奏的乐章不同，各由专人负责。后面的<span class="lyterm">三饭缭</span>、<span class="lyterm">四饭缺</span>也类似。</p></li>
-<li><p><span class="lyterm">鼓方叔</span>：击鼓的乐师，名方叔。<span class="lyterm">河</span>指黄河，<span class="lyterm">入于河</span>即去了黄河边住下。<span class="lyterm">入</span>：泛指去到，至，这里有隐居不为世用的意味，与“出仕”的“出”相对。</p></li>
+<li><p><span class="lyterm">鼓方叔</span>：击鼓的乐师，名方叔。<span class="lyterm">河</span>指黄河，<span class="lyterm">入于河</span>即去了黄河边住下。<span class="lyterm">入</span>：泛指去到，至，还包含隐居不为世用的意味，与“出仕”的“出”相对。</p></li>
 <li><p><span class="lyterm">播鼗（<span class="lypinyin">táo</span>）武</span>：摇小鼓的乐师，名武。<span class="lyterm">鼗</span>：类似于现代的拨浪鼓。<span class="lyterm">汉</span>指汉水。</p></li>
 <li><p><a id="shixiang"></a><span class="lyterm">击磬襄</span>：又称师襄，他还精于奏琴，孔子曾向他学琴，事见《史记·孔子世家》。</p></li>
 </ul>
